<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvQuantityhints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boardgameActivity_quantitymessage"
        android:textSize="10sp"
        android:textColor="@color/error_text"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boardgameActivity_name"
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/boardgameActivity_nameHints"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boardgameActivity_num"
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/boardgameActivity_quantityHints"
        android:inputType="number"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boardgameActivity_tel"
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/boardgameActivity_telHints"
        android:inputType="number"
        android:maxLength="8"
        android:textSize="16sp" />

</LinearLayout>