<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.emmasuzuki.easyform.EasyForm
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        app:submitButton="@+id/btnSubmit">

        <com.emmasuzuki.easyform.EasyTextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:textSize="14sp"
            android:hint="@string/privateBookingActivity_name"
            app:errorMessage="@string/error_message_empty"
            app:errorType="empty" />

        <LinearLayout
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:alpha="0.9"
                android:textSize="14sp"
                android:text="@string/privateBookingActivity_date" />

            <TextView
                android:id="@+id/tvDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/battleActivity_dateSelect" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/date">

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:text="@string/privateBookingActivity_time"
                android:textSize="14sp"
                android:alpha="0.9" />

            <Spinner
                android:id="@+id/spTimeUnit"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp" />

            <Spinner
                android:id="@+id/spHour"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:text=":"
                android:textSize="14sp"
                android:alpha="0.9" />

            <Spinner
                android:id="@+id/spMinutes"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvTimeWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time"
            android:layout_alignLeft="@+id/time"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:textSize="10sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/battleActivity_openTime" />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTimeWarning"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:text="@string/privateBookingActivity_duration"
            android:textSize="14sp"
            android:alpha="0.9" />

        <TextView
            android:id="@+id/tvNumOfDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTimeWarning"
            android:layout_toRightOf="@+id/tvDuration"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:alpha="0.9" />

        <SeekBar
            android:id="@+id/sbDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTimeWarning"
            android:layout_toRightOf="@+id/tvDuration"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:max="24" />

        <TextView
            android:id="@+id/tvPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDuration"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:text="@string/privateBookingActivity_place"
            android:textSize="14sp"
            android:alpha="0.9" />

        <Spinner
            android:id="@+id/spinner_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDuration"
            android:layout_toRightOf="@+id/tvPlace"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />

        <com.emmasuzuki.easyform.EasyTextInputLayout
            android:id="@+id/people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPlace"
            android:layout_marginTop="8dp"
            app:textSize="14sp"
            android:hint="@string/privateBookingActivity_people"
            android:inputType="number"
            app:errorMessage="@string/error_message_people"
            app:regexPattern="^[1-9][0-9]?$|^100$" />

        <com.emmasuzuki.easyform.EasyTextInputLayout
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/people"
            android:layout_marginTop="8dp"
            app:textSize="14sp"
            android:hint="@string/privateBookingActivity_tel"
            android:inputType="number"
            app:errorMessage="@string/error_message_tel"
            app:regexPattern="[0-9]{8}" />

        <com.emmasuzuki.easyform.EasyTextInputLayout
            android:id="@+id/remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tel"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="35dp"
            app:textSize="14sp"
            android:hint="@string/privateBookingActivity_remark"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:hintAnimationEnabled="true"
            app:errorEnabled="true"
            app:counterOverflowTextAppearance="@style/TextInputError"
            app:errorTextAppearance="@style/TextInputError" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/remark"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/privateBookingActivity_title" />

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_below="@+id/tvTitle" />

        <Button
            android:id="@id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivPhoto"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/privateBookingActivity_submit" />

    </com.emmasuzuki.easyform.EasyForm>

</ScrollView>
