<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/eventActivity_name" />

    <TextView
        android:id="@+id/tvDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEventName"
        android:layout_marginTop="15dp"
        android:textColor="@color/navigationBarColor"
        android:textSize="14sp"
        android:text="@string/eventActivity_detail" />

    <TextView
        android:id="@+id/tvMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDetail"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:text="@string/eventActivity_more" />

</RelativeLayout>